--- a/new1.html
+++ b/new1.html
@@ -6,8 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>tuhoc.cc index file</h1>
-    <h2>sửa đổi lần 1 </h2>
-    <h1>sửa đổi lần 2 </h1>
+    <h1>new</h1>
 </body>
 </html>
