--- a/new1.html
+++ b/new1.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <h1>cong việc 1 </h1>
-</body>
+  </head>
+  <body>
+    <h1>cong việc 1</h1>
+    <h2>cong viec 2</h2>
+  </body>
 </html>
